[tool.poetry]
name = "byu_pytest_utils"
version = "0.7.2"
description = "A few utilities for pytest to help with integration into gradescope"
authors = ["Gordon Bean <gbean@cs.byu.edu>", "Daniel Zappala <daniel.zappala@gmail.com>"]
license = "MIT"
classifiers = [
    "Framework :: Pytest"
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"

[tool.poetry.plugins.pytest11]
byu_pytest_utils = "byu_pytest_utils.pytest_plugin"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
